--- a/maven/base-package/pom.xml
+++ b/maven/base-package/pom.xml
@@ -291,6 +291,7 @@
                         <vropsUser>${vrli.vropsUser}</vropsUser>
                         <vropsPassword>${vrli.vropsPassword}</vropsPassword>
                         <vropsAuthSource>${vrli.vropsAuthSource}</vropsAuthSource>
+                        <packageImportOverwriteMode>${vrli.packageImportOverwriteMode}</packageImportOverwriteMode>
                     </vrli>
                     <ignoreSslCertificate>${vrealize.ssl.ignore.certificate}</ignoreSslCertificate>
                     <ignoreSslHostname>${vrealize.ssl.ignore.hostname}</ignoreSslHostname>
