--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,18 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Use Node.js 16.x
+      - name: Use Node.js 14.17.1
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.17.1
 
       - uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: '8'
+          
+      - name: Install npm 6.14.13
+        run: sudo npm install -g npm@6.14.13
           
       - name: Print npm version
         run: npm --version
