--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,19 +32,22 @@ jobs:
         run: node --version
       - name: Print mvn version
         run: mvn --version
+        
+      - name: Print mvn settings
+        run: cat .m2/settings.xml
           
-      - name: Build 'keystore-example'
-        run: mvn clean install -f common/keystore-example/pom.xml
-      - name: Build 'npmlib'
-        run: mvn clean install -f maven/npmlib/pom.xml 
-      - name: Build 'iac'
-        run: mvn clean install -f pom.xml 
-      - name: Build 'base-package'
-        run: mvn clean install -f maven/base-package/pom.xml
-      - name: Build 'packages'
-        run: mvn clean install -f packages/pom.xml 
-      - name: Build 'typescript-project-all'
-        run: mvn clean install -f maven/typescript-project-all/pom.xml 
-      - name: Build 'repository'
-        run: mvn clean install -f maven/repository/pom.xml 
+#       - name: Build 'keystore-example'
+#         run: mvn clean install -f common/keystore-example/pom.xml
+#       - name: Build 'npmlib'
+#         run: mvn clean install -f maven/npmlib/pom.xml 
+#       - name: Build 'iac'
+#         run: mvn clean install -f pom.xml 
+#       - name: Build 'base-package'
+#         run: mvn clean install -f maven/base-package/pom.xml
+#       - name: Build 'packages'
+#         run: mvn clean install -f packages/pom.xml 
+#       - name: Build 'typescript-project-all'
+#         run: mvn clean install -f maven/typescript-project-all/pom.xml 
+#       - name: Build 'repository'
+#         run: mvn clean install -f maven/repository/pom.xml 
       
